--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -13,27 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Binarizer' is not defined",
+     "ename": "ImportError",
+     "evalue": "No module named pyspark.ml",
      "output_type": "error",
      "traceback": []
     }
    ],
    "source": [
-    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3)\n",
+    "from pyspark.ml import *\n",
+    "from pyspark.ml.feature import *\n",
+    "from pyspark.ml.classification import *\n",
+    "from pyspark.ml.tuning import *\n",
+    "from pyspark.ml.evaluation import *\n",
+    "from pyspark.ml.regression import *\n",
     "\n",
+    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3) ## Binarize on rating < 3\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
-    "\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
-    "\n",
     "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
-    "\n",
     "pipeline = Pipeline(stages = [bin, tok, hashTF, lr])"
    ]
   },
