--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -26,14 +26,7 @@
     }
    ],
    "source": [
-    "from pyspark.ml import *\n",
-    "from pyspark.ml.feature import *\n",
-    "from pyspark.ml.classification import *\n",
-    "from pyspark.ml.tuning import *\n",
-    "from pyspark.ml.evaluation import *\n",
-    "from pyspark.ml.regression import *\n",
-    "\n",
-    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3) ## Binarize on rating < 3\n",
+    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = )\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
     "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
