Add threshold of 3.0 for reviews

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = )\n",
+    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3.0) # Good review threshold 3.0\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
     "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
