Add imports to make it compile

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -26,7 +26,14 @@
     }
    ],
    "source": [
-    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3.0) # Good review threshold 3.0\n",
+    "from pyspark.ml import *\n",	
+    "from pyspark.ml.feature import *\n",
+    "from pyspark.ml.classification import *\n",
+    "from pyspark.ml.tuning import *\n",
+    "from pyspark.ml.evaluation import *\n",
+    "from pyspark.ml.regression import *\n",
+    "\n",
+    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3.0) # Good review threshold 3.0\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
     "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
