Add spark.ml imports to make it compile

--- a/notebooks/ml-pipeline.ipynb
+++ b/notebooks/ml-pipeline.ipynb
@@ -8,6 +8,13 @@
    },
    "outputs": [],
    "source": [
+    "from pyspark.ml import *\n",
+    "from pyspark.ml.feature import *\n",
+    "from pyspark.ml.classification import *\n",
+    "from pyspark.ml.tuning import *\n",
+    "from pyspark.ml.evaluation import *\n",
+    "from pyspark.ml.regression import *\n",
+    "\n",
     "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold)\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
