--- a/notebooks/ml-pipeline.ipynb
+++ b/notebooks/ml-pipeline.ipynb
@@ -15,7 +15,7 @@
     "from pyspark.ml.evaluation import *\n",
     "from pyspark.ml.regression import *\n",
     "\n",
-    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold)\n",
+    "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 3.0) # add a 3.0 threshold\n",
     "tok = Tokenizer(inputCol = \"review\")\n",
     "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
     "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
