--- a/notebooks/ml-pipeline.ipynb
+++ b/notebooks/ml-pipeline.ipynb
@@ -16,9 +16,9 @@
     "from pyspark.ml.regression import *\n",
     "\n",
     "bin = Binarizer(inputCol = \"rating\", outputCol = \"label\", threshold = 4.5) # Positive reviews > 4.5 threshold\n",
-    "tok = Tokenizer(inputCol = \"review\")\n",
-    "hashTF = HashingTF(inputCol=tok.getOutputCol(), numFeatures=10000, outputCol=\"features\")\n",
-    "lr = LogisticRegression(maxIter=10, regParam = 0.0001, elasticNetParam = 1.0)\n",
+    "tok = Tokenizer(inputCol = \"review\", outputCol = \"words\")\n",
+    "hashTF = HashingTF(inputCol = tok.getOutputCol(), numFeatures = 10000, outputCol = \"features\")\n",
+    "lr = LogisticRegression(maxIter = 10, regParam = 0.0001, elasticNetParam = 1.0)\n",
     "pipeline = Pipeline(stages = [bin, tok, hashTF, lr])"
    ]
   }
